<resources>
    <string name="app_name">LabzApp</string>
    <string name="app_title">Labzapp</string>
    <string name="connecting_labs_with_you">Connecting Labs with you</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pin_code">Pin code</string>
    <string name="login">login</string>
    <string name="by_logging_in">By logging in, you agree to our terms and conditions</string>

    <string name="_0">0</string>
    <string name="cancel">cancel</string>
    <string name="proceed">Proceed</string>
    <string name="user_details">Update Location and Complete Profile</string>
    <string name="use_current_location">Use current Location</string>
    <string name="or">OR</string>
    <string name="select_location_from_map">Select location from map</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="submit">Submit</string>
    <string name="request_a_call">Request a Call</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="labs">Labs</string>
    <string name="book_a_test">Book a Test</string>
    <string name="health_packages">Health Packages</string>
    <string name="view_all">View all</string>
    <string name="booking_for">Booking for</string>
    <string name="self">Self</string>
    <string name="ok">Ok</string>
    <string name="another_person">Another person</string>
    <string name="your_call_has_been_registered_our_representative_will_contact_you_shortly">Your call has been registered. Our representative will contact you shortly.</string>
    <string name="upload_images_of_your_prescription">Upload images of your prescription</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="_31_05_2021">31-05-2021</string>
    <string name="select_text">Select text</string>
    <string name="_3_tests_selected_click_to_add_more_or_remove">3 Tests selected Click to add more or remove</string>
    <string name="biovision_clinical_laboratory_near_ksrtc_bus_stand_ayur">Biovision Clinical Laboratory Near KSRTC bus stand, Ayur</string>
    <string name="_continue">Continue</string>
    <string name="ayur_anchal_road_sh1_kollam_691532">Ayur- Anchal road , Sh1, Kollam 691532</string>
    <string name="select_a_test">Select a Test</string>
    <string name="search_by_test_name">Search by Test Name</string>
    <string name="click">Click</string>
    <string name="select">Select</string>
    <string name="abc_clinical_laboratory_near_ksrtc_bus_stand_ayur">Abc Clinical Laboratory Near KSRTC bus stand ,Ayur</string>
    <string name="seleced_lab">Seleced Lab</string>
    <string name="selected_tests">Selected Tests</string>
    <string name="total_test_charge">Total test charge</string>
    <string name="_100">₹ 100</string>
    <string name="_400">₹ 400</string>
    <string name="no_need_to_pay_now">No need to pay now</string>
    <string name="payment_will_be_collected_at_the_time_of_sample_collection">Payment will be collected at the time of sample collection</string>
    <string name="patient_details">Patient details</string>
    <string name="p_number">9876543210</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="my_profile">My Profile</string>
    <string name="my_bookings">My Bookings</string>
    <string name="my_results">My results</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log out</string>
    <string name="available_labs">Available labs</string>
    <string name="available_tests">Available Tests</string>
    <string name="to_view_the_test_description"> to view the test description</string>
    <string name="_11_04_2021">11/04/2021</string>
    <string name="booking_id_19877876">Booking id :19877876</string>
    <string name="patient_name">Patient name :</string>
    <string name="age_">Age :</string>
    <string name="male_female">Male/Female</string>
    <string name="address_">Address :</string>
    <string name="phone_number_">Phone number :</string>
    <string name="lab_details">Lab details</string>
    <string name="roganidan">Roganidan</string>
    <string name="ayur_kollam_691533">Ayur , Kollam -691533</string>
    <string name="sample_collection_date_and_time">Sample collection date and time</string>
    <string name="_11_11_2021_11_am">11/11/2021, 11 am</string>
    <string name="tests_booked">Tests booked</string>
    <string name="albumin">Albumin</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="blood_sugar">Blood sugar</string>
    <string name="service_charge">Service charge</string>
    <string name="download_report">Download report</string>
    <string name="test_reports">Test Reports</string>
    <string name="choose_your_lab">Choose your lab</string>
    <string name="select_your_package">Select your package</string>
    <string name="diabetic_package">Diabetic package</string>
    <string name="_12_tests">12 tests</string>
    <string name="_25_off">25% off</string>
    <string name="book_package">Book Package</string>
    <string name="tests_description">Tests Description</string>
    <string name="diabetes_care_package_advanced_which_can_be_conducted_at_the_convenience_of_your_home_diabetes_care_maxi_is_one_such_comprehensive_package_to_screen_for_diabetes_the_tests_includes_blood_sugar_fasting_creatinine_hba1c_glycosylated_haemoglobin_lipid_profile_urine_for_microalbuminuria_and_urine_routine">Diabetes Care Package - Advanced which can be conducted at the convenience of your home. diabetes Care (Maxi) is one such comprehensive package to screen for diabetes the tests includes blood sugar fasting, creatinine, Hba1c (glycosylated haemoglobin) , lipid profile, urine for microalbuminuria and urine routine.</string>
    <string name="do_not_eat_or_drink_anything_other_than_water_for_12_hours_before_the_test">Do not eat or drink anything other than water for 12 hours before the test</string>
    <string name="test_requirements">Test Requirements</string>
    <string name="tests_included">Tests included</string>
    <string name="test_name">Test name</string>
    <string name="complete_blood_count_cbc">Complete blood count (CBC)</string>
    <string name="a_complete_blood_count_cbc_test_is_a_group_of_tests_that_provides_information_about_blood_cells_like_red_blood_cells_rbc_white_blood_cells_wbc_and_platelets_it_is_routinely_performed_to_provide_an_overview_of_a_patient_s_general_health_status">A complete blood count (CBC) test is a group of tests that provides information about blood cells like Red Blood Cells (RBC), White Blood Cells (WBC) and platelets. It is routinely performed to provide an overview of a patient\'s general health status.</string>
    <string name="reload">Reload</string>
    <string name="you_re_offline">You’re offline</string>
    <string name="check_your_connection_and_try_again">Check your connection and try again</string>
    <string name="selected_packages">Selected Packages</string>
    <string name="add_patient_details">Add patient details</string>
    <string name="other">Other</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This App requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this App.</string>
    <string name="rupee">\u20B9 </string>
    <string name="close">Close</string>
    <string name="my_reports">My Reports</string>

    <string name="downloading">Downloading…</string>
    <string name="external_storage_permission_rationale">The app will not be able to function if this permission is denied making it unusable.</string>
    <string name="permission_request">Read/Write External Storage are crucial permissions for the app\'s functionality. Please enable it in your settings to be able to use this app.</string>
    <string name="show_settings">Show Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>