<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:orientation="vertical">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Jayaram K S"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/p_number"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/home"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_home_page" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/about_us"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_about_us" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/my_profile"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_man" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/my_bookings"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_booking" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/my_results"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_medical_report" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_terms_cond" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/contact_us"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_contact" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/log_out"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_power_button" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>