<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/_11_04_2021"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_name"
                android:textColor="@color/green"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_id_19877876"
                android:textColor="@color/green"
                android:textSize="12sp" />
        </LinearLayout>


        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/round_button_white"
            android:elevation="5dp"
            android:text="@string/download_report"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:backgroundTint="@color/green" />

    </LinearLayout>

</androidx.cardview.widget.CardView>