<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/orange"
        android:gravity="center|start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/user_details"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textVwLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="80dp"
                    android:background="@drawable/round_button_white"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:text="@string/use_current_location"
                    android:textColor="@color/textBlack" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/or"
                    android:textColor="@color/textBlack"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/textVwLocation"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_button_white"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/select_location_from_map"
                    android:textColor="@color/textBlack" />


                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:src="@drawable/no_image" />

            </RelativeLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button_white"
                android:elevation="5dp"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="10dp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button_white"


                android:elevation="5dp"
                android:hint="@string/age"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="10dp" />


            <RadioGroup
                android:id="@+id/daily_weekly_button_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textColor="@drawable/radio_flat_text_selector" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="@string/female"
                    android:textColor="@drawable/radio_flat_text_selector" />

            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button_white"
                android:elevation="5dp"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:paddingStart="15dp"
                android:paddingEnd="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button_white"
                android:elevation="5dp"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingEnd="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button_white"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/district" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="20dp"
                app:backgroundTint="@color/green"
                android:background="@drawable/round_button_white"
                android:elevation="5dp"
                android:text="@string/submit"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>