<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_no_network" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_re_offline"
        android:textColor="@color/textBlack"
        android:textSize="24sp"
        android:layout_margin="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_your_connection_and_try_again"
        android:textColor="@color/textBlack"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reload_wifi"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button_white"
        android:backgroundTint="@color/orange"
        android:elevation="5dp"
        android:text="@string/reload"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white" />

</LinearLayout>