<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/orange"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/no_image" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/connecting_labs_with_you"
            android:textColor="@color/white" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                app:spanCount="4"
                tools:listitem="@layout/d4_r1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_15dp"
                    android:drawableTop="@drawable/no_image"
                    android:elevation="5dp"
                    app:backgroundTint="@color/green"
                    android:gravity="bottom|center"
                    android:paddingBottom="10dp"
                    android:textColor="@color/textBlack"
                    android:text="@string/request_a_call"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:background="@drawable/round_button_15dp"
                    android:drawableTop="@drawable/no_image"
                    android:elevation="5dp"
                    android:gravity="bottom|center"
                    android:paddingBottom="10dp"
                    android:ellipsize="end"
                    android:textColor="@color/textBlack"
                    android:text="@string/upload_prescription"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_15dp"
                    android:drawableTop="@drawable/no_image"
                    android:elevation="5dp"
                    android:gravity="bottom|center"
                    android:paddingBottom="10dp"
                    android:textColor="@color/textBlack"
                    android:text="@string/labs"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_15dp"
                    android:drawableTop="@drawable/no_image"
                    android:elevation="5dp"
                    android:gravity="bottom|center"
                    android:paddingBottom="10dp"
                    android:textColor="@color/textBlack"
                    android:text="@string/book_a_test"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/green"
                    android:text="@string/health_packages" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/green"
                    android:text="@string/view_all" />

            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/stroke_button_20dp"
                android:scaleType="fitXY"
                android:src="@drawable/no_image" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>